<resources>
    <string name="app_name">s8129912Assignment2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Student Login</string>
    <string name="login_username_hint">Username (Student ID)</string>
    <string name="login_password_hint">Password (First Name)</string>
    <string name="login_button">Login</string>
    <string name="dashboard_title">Dashboard Entities</string>
    <string name="details_title">Entity Details</string>
    <string name="details_description_label">Description</string>
    <string name="details_back_button">Back to Dashboard</string>
    <string name="details_type_format">Type: %1$s</string>
</resources>